update menu to right

--- a/mortgage-front/src/app/Components/example/example.component.html
+++ b/mortgage-front/src/app/Components/example/example.component.html
@@ -1,7 +1,5 @@
+<header style=" height: 150px; width: 98vw;background-color: rgb(211, 211, 211);;">
+    hosted!!</header>
 <app-navigation-menu [componentsList]="componentArray"></app-navigation-menu>
 
-<div>
-    <h1>
-        An example of a parent component that hosts the side routing
-    </h1>
-</div>
+<footer style=" height: 150px; width: 98vw;background-color: rgb(209, 210, 210);;"></footer>
