--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -1,34 +1,74 @@
-*{
+
+* {
   font-size: 25px;
-  background-color:white!important;
+  text-align: right !important;
+  background-color: white !important;
   color: black;
 }
+
 .sidenav-container {
-  height: 100%;
-  background-color: rgba(223, 223, 223, 0.371)!important;
+  height:max-content;
+  min-height:70vh
 }
-.sidenav {
-  width: 17vw;
-  min-width: min-content;
+mat-sidenav{
+  box-shadow: 0 7px 20px 5px #00000088;
 }
 .mat-toolbar {
   background: #000000!important;
   color: white;
 }
-a{
+
+.sidenav {
+  width: 17vw;
+  min-width: min-content;
+  background-color: #fefefe; /* צבע רקע של ה-sidenav */
+  border-right: 1px solid #ccc; /* קו תחתון להבדל */
+}
+
+.mat-nav-list {
+  padding-top: 20px; 
+}
+
+.mat-list-item {
+  padding: 15px 30px; 
+}
+
+.mat-list-item:hover {
+  background-color: rgba(207, 210, 210, 0.2); 
+  
+}
+
+.mat-icon {
+  margin-right: 10px; /* מרווח מימין לסמלי אייקון ב-sidenav */
+}
+
+.main-content {
+  margin-top: 0; /* מרווח 0 מלמעלה לתוכן הראשי */
+  padding: 20px;
+  background-color: #f9f9f9; /* צבע רקע לתוכן הראשי */
+}
+
+.toggle-button {
+  position: absolute;
+  top: 0px; /* מרווח 10px מלמעלה */
+  right: 20px; /* מרווח 20px מימין */
+  z-index: 20; /* שכבה מעל לתוכן הראשי */
+}
+a {
   padding: 30px;
 }
-.content {
-  padding: 20px;
+
+a:hover {
+  background-color: rgba(207, 210, 210, 0.327) !important;
 }
-a:hover{
-  background-color: rgba(207, 210, 210, 0.327)!important;
-}
-mat-icon,span{
-  background-color: transparent!important;
+
+mat-icon,
+span {
+  background-color: transparent !important;
   padding-right: 10px;
   padding-bottom: 5px;
 }
-span{
+
+span {
   margin-left: 5px;
 }
