Deleting unnecessary parts

--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -4,6 +4,7 @@
   text-align: right ;
   background-color: white !important;
   color: black;
+  scroll-behavior: smooth;
 }
 
 .sidenav-container {
