--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -1,76 +1,29 @@
 * {
-  /*General design*/
   font-size: 20px;
-  text-align: right ;
-  background-color: white !important;
-  color: black;
+  text-align: right;
   scroll-behavior: smooth;
 }
-
-.sidenav-container {
-  //The sidenav cobtainer height definition
-  height: max-content;
-  min-height: 80vh;
-}
-.toggle-button{
- background-color: rgba(203, 203, 203, 0.508) !important;
- margin: -10px;
+.sidenav-container{
+  min-height:550px;
 }
 .sidenav {
-  //width definition of the sidenav
   box-shadow: 0 7px 20px 5px #00000088;
   width: 17vw;
   min-width: max-content;
 }
 
-.mat-list-item:hover {
-  background-color: rgba(207, 210, 210, 0.2);
-}
-
-.main-content {
-  //The guests components in this component
-  padding: 20px;
-}
-
 a {
-  padding: 10px;
-}
-
-a:hover {
-  background-color: rgba(207, 210, 210, 0.327) !important;
-}
-
-mat-icon,
-//The name and icon design in the sidebar
-span {
-  background-color: transparent !important;
-  padding-bottom: 5px;
-}
-
-span {
-  margin-left: 5px;
+  padding: 30px;
 }
 
 mat-icon {
   float: right;
 }
-@media screen and (max-width: 920px) {
-  *{font-size: 15px;
-  }
-  .main-content {
-    //The guests components in this component
-    padding: 0px;
-  }
-  
-  a {
-    padding: 0px;
-  }
-  .sidenav-container {
-    height: 50vh; /* Adjust height for smaller screens */
-  }
-  .toggle-button{
-    background-color: rgba(203, 203, 203, 0.508) !important;
-    margin: 10px;
-    text-align-last:center;
-   }
+.mat-sidenav-content {
+  min-height: max-content;
+  padding: 20px;
 }
+// .toggle-button{
+//  background-color: rgba(203, 203, 203, 0.508) !important;
+//  margin: -10px;
+// }
