--- a/mortgage-front/src/app/Components/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/Components/toolbar/toolbar.component.html
@@ -1,1 +1,20 @@
-<p>toolbar works!</p>
+<mat-toolbar color="primary">
+  @if(isLoggedIn) {
+  <button class="toolbar" mat-button (click)="logout()">יציאה</button>
+
+  }
+
+  @else {
+  <button class="toolbar" id="login" mat-button (click)="login()">התחברות</button>
+
+  }
+  <div>
+    <span class="span">!שלום {{ user }}</span>
+  </div>
+
+  <!-- <button class="toolbar" mat-button (click)="openMainMenu()">תפריט ראשי</button> -->
+  <!-- <md-button class="md-icon-button md-primary" aria-label="Settings">
+    <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+  </md-button> -->
+
+</mat-toolbar>
