--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="sidenav-container">
   <!-- Container for the side navigation menu and main content -->
-  <mat-sidenav #sidenav mode="side" position="end" opened class="sidenav">
+  <mat-sidenav #sidenav mode="side" position="end" class="sidenav">
     <!-- Toolbar -->
     <mat-nav-list>
       <!-- List of navigation items -->
@@ -21,7 +21,7 @@
       <mat-icon>{{ isSidebarOpened ? 'close' : 'menu' }}</mat-icon>
     </button> -->
     <div class="content" style="margin-right: 50px;">
-      <!-- Container for the main content -->
+      <!-- Container for th;e main content -->
       <router-outlet></router-outlet>
       <!-- Outlet for the routed component -->
     </div>
