update changes to the side navigate

--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
@@ -1,9 +1,8 @@
 <mat-sidenav-container class="sidenav-container">
   <!-- Container for the side navigation menu and main content -->
-  <mat-sidenav #sidenav mode="side" position="end" opened class="sidenav">
+  <mat-sidenav #sidenav mode="side" position="end" class="sidenav">
     <!-- Toolbar -->
     <mat-nav-list>
-      
       <!-- List of navigation items -->
       @for (c of componentsList; track c) {
         <a mat-list-item [routerLink]="c.path">
@@ -16,16 +15,13 @@
       }
     </mat-nav-list>
   </mat-sidenav>
-
   <mat-sidenav-content class="main-content">
     <!-- Main content area -->
-    <button mat-icon-button (click)="toggleSidebar(); sidenav.toggle()" class="toggle-button"  >
-      <!-- Button to toggle the side navigation menu -->
+    <!-- <button mat-icon-button (click)="toggleSidebar(); sidenav.toggle()" class="toggle-button"  >
       <mat-icon>{{ isSidebarOpened ? 'close' : 'menu' }}</mat-icon>
-      <!-- Icon to display based on the menu state -->
-    </button>
+    </button> -->
     <div class="content" style="margin-right: 50px;">
-      <!-- Container for the main content -->
+      <!-- Container for th;e main content -->
       <router-outlet></router-outlet>
       <!-- Outlet for the routed component -->
     </div>
