--- a/mortgage-front/src/app/Components/login/login.component.html
+++ b/mortgage-front/src/app/Components/login/login.component.html
@@ -1,1 +1,1 @@
-<p style="background-color: rgb(165, 165, 165);width: 100%;height: 50vh;">login works!</p>
+<p style="width: 100%;height: 50vh;">login works!</p>
