add explanation for example component

--- a/mortgage-front/src/app/Components/example/example.component.html
+++ b/mortgage-front/src/app/Components/example/example.component.html
@@ -1,5 +1,5 @@
 <header style=" height: 150px; width: 98vw;background-color: rgb(211, 211, 211);;">
-    hosted!!</header>
+    example component of "navigation-menu" component!!</header>
 <app-navigation-menu [componentsList]="componentArray"></app-navigation-menu>
 
 <footer style=" height: 150px; width: 98vw;background-color: rgb(209, 210, 210);;"></footer>
