add the customer-list and lead-list components

--- a/mortgage-front/src/app/Components/customer-detail-modal/customer-detail-modal.component.html
+++ b/mortgage-front/src/app/Components/customer-detail-modal/customer-detail-modal.component.html
@@ -1,1 +1,6 @@
 <p>customer-detail-modal works!</p>
+<div>
+    <h2>עריכת לקוח {{ customerId }}</h2>
+    <h3> {{customer?.last_Name}}</h3>
+    <!-- טופס עריכת הלקוח כאן -->
+  </div>
