--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -11,6 +11,9 @@
   width: 17vw;
   min-width: max-content;
 }
+a{
+  padding: 30px!important;
+}
 mat-icon {
   float: right;
 }
@@ -18,12 +21,23 @@ mat-icon {
   min-height: max-content;
   padding: 20px;
 }
-@media only screen and (max-width: 600px) {
-  *{
-    font-size: 15px;
+@media only screen and (max-width: 900px) {
+  a{
+    padding: 5px!important;
+  }
+  span{
+    font-size: 18px!important;
+  }
+  .mat-icon {
+    float: right;
+  }
+  .sidenav {
+    box-shadow: 0 7px 20px 5px #00000088;
+    width: 25vw;
+    min-width: max-content;
   }
 }
-// .toggle-button{
-//  background-color: rgba(203, 203, 203, 0.508) !important;
-//  margin: -10px;
-// }
+.toggle-button{
+ background-color: rgba(203, 203, 203, 0.508) !important;
+ margin: -10px;
+}
